--- a/ref3.bib
+++ b/ref3.bib
@@ -29,6 +29,43 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Peng11,
+   author = {{Peng}, E.~W. and {Ferguson}, H.~C. and {Goudfrooij}, P. and 
+  {Hammer}, D. and {Lucey}, J.~R. and {Marzke}, R.~O. and {Puzia}, T.~H. and 
+  {Carter}, D. and {Balcells}, M. and {Bridges}, T. and {Chiboucas}},
+    title = "{The HST/ACS Coma Cluster Survey. IV. Intergalactic Globular Clusters and the Massive Globular Cluster System at the Core of the Coma Galaxy Cluster}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1101.1000},
+ keywords = {galaxies: clusters: individual: Coma, galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: halos, galaxies: star clusters: general, globular clusters: general},
+     year = 2011,
+    month = mar,
+   volume = 730,
+      eid = {23},
+    pages = {23},
+      doi = {10.1088/0004-637X/730/1/23},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...730...23P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{astropy,
+   author = {{The Astropy Collaboration} and {Price-Whelan}, A.~M. and {Sip{\H o}cz}, B.~M. and 
+  {G{\"u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and 
+  {Conseil}, S. and {Shupe}, D.~L. and {Craig}, M.~W. and {Dencheva}},
+    title = "{The Astropy Project: Building an inclusive, open-science project and status of the v2.0 core package}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1801.02634},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+     year = 2018,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180102634T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Paolillo02,
    author = {{Paolillo}, M. and {Fabbiano}, G. and {Peres}, G. and {Kim}, D.-W},
     title = "{Deep ROSAT HRI Observations of the NGC 1399/NGC 1404 Region: Morphology and Structure of the X-Ray Halo}",
